﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-01-27 Marc Delisle  <lem9@users.sourceforge.net>
    $ libraries/fpdf/fpdf.php: bug #1106146, missing header for PDF,
      thanks to Michal

2005-01-27 Michal Čihař  <michal@cihar.com>
    * read_dump.php: Fix detection of SELECT query to display on multiple
      submits (bug #1110727).

2005-01-23 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_query_box.php: bug #1107937, undefined $fields_list
    * lang/estonian: Update thanks to Alvar Soome - finsoft.
    ### 2.6.1 released

2005-01-23 Michal Čihař  <michal@cihar.com>
    * export.php: Back to Content-Type application/x-bzip2 on bzip2 export
      (bug #1106652).

2005-01-23 Alexander M. Turek  <me@derrabus.de>
    * libraries/sqlparser.data.php: Added some keywords.

2005-01-22 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/bookmark.lib.php: bug #1103289: num_rows and MYSQL_USE_RESULT,
      and fix a typo "boommark"
    * lang/galician: Updated, thanks to Xosé Calvo.
    * lang/serbian: Updated, thanks to Mihailo Stefanovic (mikis).

2005-01-20 Michael Keck  <mkkeck@users.sourceforge.net>
    * libraries/tooltip.js: new JS library for tooltips (hints)
    * libraries/common.lib.php: img tag modified for mouseover / mouseout
      (show/hide tooltip)
    * header.inc.php: needed div-container for tooltips
    * footer.inc.php: linking to js-file tooltip.js
    * themes/.../theme_right.css.php: tooltip class
    * querywindow.php / tbl_query_box.php: resizing the querywindow if it
      to small
    * themes/.../layout.inc.php: increased QueryWindowHeight / QueryWindowWidth
    * themes/.../theme_right.css.php: new class for disabled (not available)
      text / values / messages
    * libraries/tooltip.js: removed wrong typos (sorry)

2005-01-20 Alexander M. Turek  <me@derrabus.de>
    * server_engines.php, server_links.inc.php: Use Michael's new icon for
      storage engines.